036/kubernetes/ch01-ch05/kubia-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-gpu
  labels:
    app: "kubia"
    gpu: "true"
spec:
  nodeSelector:
    app: "kubia-gpu"
    gpu: "true"
  containers:
    - image: luksa/kubia
      name: kubia
