036/kubernetes/ch01-ch05/kubia-pod.yaml
# 在服务中引用命名pod
apiVersion: v1
kind: Service
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
