036/kubernetes/ch01-ch05/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  sessionAffinity: ClientIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - port: 443
    name: https
    targetPort: 8443
  selector:
    app: kubia
