036/kubernetes/ch01-ch05/kubia-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubia-service-gateway
spec:
  selector:
    # use istio default controller
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
