036/kubernetes/ch01-ch05/kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
        #        - path: /
        #          backend:
        #            serviceName: kubia
        #            servicePort: 80
        - path: /kubia
          backend:
            serviceName: kubia
            servicePort: 80
